add card slider

--- a/src/components/Header/Header.module.css
+++ b/src/components/Header/Header.module.css
@@ -6,6 +6,11 @@
   padding-right: 80px;
 }
 
+.logo {
+  width: 131.829px;
+  max-width: 131.829px;
+}
+
 .navList {
   color: #fff;
   font-size: 14px;
